<?xml version="1.0" encoding="utf-8"?>
<!-- ============================================================ -->
<!-- SETTINGS/PREFERENCES -->
<!-- ============================================================ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- ============================================================ -->
    <!-- SYNC LOGO -->
    <!-- ============================================================ -->

	<PreferenceCategory android:title="@string/language_preference_category"
	    android:key="language">

		<ListPreference android:key="language_selection"
            android:title="@string/language_list_preference_title"
            android:summary="@string/language_list_preference_summary"
            android:defaultValue="en"
            android:entries="@array/languageSelection"
            android:entryValues="@array/languageSelectionValues"/>
	           
    </PreferenceCategory>
</PreferenceScreen>
