<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SupportingLifePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- ============================================================ -->
    <!-- ASSESSMENT BREAD-CRUMB WIZARD UI 							  -->
    <!-- CCM ASSESSMENT PAGE: GENERAL PATIENT DETAILS 				  -->
    <!-- ============================================================ -->

    <TextView style="@style/WizardPageTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:orientation="vertical" >

            <!-- ============================================================ -->
            <!-- TODAY'S DATE 												  -->
            <!-- ============================================================ -->

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            <TextView
	                style="@style/AssessmentFormLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/ccm_general_patient_details_today_date_label" />
	
	            <TextView
	                style="@style/AssessmentDisabledTextView"
	                android:id="@+id/ccm_general_patient_details_today_date"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:enabled="false"/>
			</LinearLayout>
            
            <!-- ============================================================ -->
            <!-- HSA IDENTIFIER 											  -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_hsa_identifier_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_hsa_identifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/ccm_general_patient_details_hsa_identifier_hint"
                android:inputType="textCapWords"
                android:saveEnabled="false" />
            
            <!-- ============================================================ -->
            <!-- CHILD'S FIRST NAME 										  -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_first_name_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/ccm_general_patient_details_first_name_hint"
                android:inputType="textCapWords"
                android:saveEnabled="false" />

            <!-- ============================================================ -->
            <!-- CHILD'S SURNAME 											  -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_surname_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/ccm_general_patient_details_surname_hint"
                android:inputType="textCapWords"
                android:saveEnabled="false" />

            <!-- ============================================================ -->
            <!-- DATE OF BIRTH 												  -->
            <!-- Intention is to display a text box that looks like a spinner -->
            <!-- to activate a date picker dialog. This is analoguos to the   -->
            <!-- approach in the Google Calendar App 						  -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_date_of_birth_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_date_of_birth"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:saveEnabled="false" />
            
            <!-- ============================================================ -->
            <!-- GENDER 													  -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:text="@string/ccm_general_patient_details_radio_gender_label" />

            <RadioGroup
                android:id="@+id/ccm_general_patient_details_radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/ccm_general_patient_details_radio_gender_male"
                    android:layout_weight="0.67"
                    android:text="@string/ccm_general_patient_details_radio_gender_male" />

                <RadioButton
                    android:id="@+id/ccm_general_patient_details_radio_gender_female"
                    android:layout_weight="0.33"
                    android:text="@string/ccm_general_patient_details_radio_gender_female" />
            </RadioGroup>

            <!-- ============================================================ -->
            <!-- CAREGIVER'S NAME											  -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_caregiver_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_caregiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/ccm_general_patient_details_caregiver_hint"
                android:inputType="textCapWords"
                android:saveEnabled="false" />

            <!-- ============================================================ -->
            <!-- PHYSICAL ADDRESS -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_physical_address_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_physical_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:saveEnabled="false"
                android:scrollHorizontally="false"
                android:hint="@string/ccm_general_patient_details_physical_address_hint" />
            

            <!-- ============================================================ -->
            <!-- VILLAGE/TA -->
            <!-- ============================================================ -->

            <TextView
                style="@style/AssessmentFormLabel"
                android:text="@string/ccm_general_patient_details_village_label" />

            <EditText
                android:id="@+id/ccm_general_patient_details_village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal"
                android:saveEnabled="false"
                android:hint="@string/ccm_general_patient_details_village_hint"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>