<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- FirstName Label -->    
    <TextView android:id="@+id/first_name_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/first_name_label" />
    
    <!-- FirstName Textfield -->
    <EditText
        android:id="@+id/first_name_text"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="" />

    <!-- Surname Label -->    
    <TextView android:id="@+id/surname_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/surname_label" />
    
    <!-- Surname Textfield -->
    <EditText
        android:id="@+id/surname_text"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="" />
    
    
    <!-- Submit Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" /> <!-- sendMessage is method handler for button click event -->
    
</LinearLayout>